ingress-nginx/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: oauth2-proxy
    port: 4180
