ingress-nginx/oauth2-proxy/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: oauth2-proxy
  ingress:
  - ports:
    - port: 4180
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
